correcciones en insertar palabra

--- a/juego-ahorcado/index.html
+++ b/juego-ahorcado/index.html
@@ -17,10 +17,10 @@
             <a href="Ahorcado.html"><input class="boton" type="submit" value="Iniciar juego"></a> 
         </section>
         <section>
-            <input class="ingresar-palabra" placeholder="Escriba una palabra nueva">
+            <input class="ingresar-palabra" id="ingrese" placeholder="Escriba una palabra nueva">
         </section>
         <section>
-            <input onclick="agregarPalabra()" class="boton" type="submit" value="Agregar palabra nueva">
+            <input onclick="agregaPalabra()" class="boton" type="submit" value="Agregar palabra nueva" id="insertaPalabra">
          </section>    
     </main>
     <footer>
