corrección de errores

--- a/juego-ahorcado/index.html
+++ b/juego-ahorcado/index.html
@@ -17,7 +17,7 @@
             <a href="Ahorcado.html"><input class="boton" type="submit" value="Iniciar juego"></a> 
         </section>
         <section>
-            <input class="ingresar-palabra" id="ingrese" placeholder="Escriba una palabra nueva">
+            <input type="text" class="ingresar-palabra" id="ingrese" placeholder="Escriba una palabra nueva">
         </section>
         <section>
             <input onclick="agregaPalabra()" class="boton" type="submit" value="Agregar palabra nueva" id="insertaPalabra">
